# PlotJuggler

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  build.sh
.github/workflows/: rlog.yaml
cmake/: FindCereal.cmake  FindRlog.cmake
plotjuggler_app/: curvelist_panel.cpp  mainwindow.cpp  mainwindow.h  plot_docker.cpp  plotwidget.cpp  point_series_xy.cpp  resource.qrc
plotjuggler_base/include/PlotJuggler/: plotdatabase.h  plotwidget_base.h  reactive_function.h
plotjuggler_base/src/: plotdata.cpp  plotwidget_base.cpp  reactive_function.cpp  timeseries_qwt.h  transform_function.cpp
plotjuggler_plugins/DataStreamMQTT/: datastream_mqtt.cpp  datastream_mqtt.ui  mosquitto_config.h  mqtt_client.cpp  mqtt_client.h  mqtt_dialog.cpp  mqtt_dialog.h
plotjuggler_plugins/ToolboxFFT/: toolbox_FFT.cpp
plotjuggler_plugins/ToolboxLuaEditor/: lua_editor.cpp  lua_editor.h  lua_editor.ui
plotjuggler_plugins/ToolboxQuaternion/: toolbox_quaternion.cpp
plugins/DataLoadRlog/: CMakeLists.txt  dataload_rlog.cpp  dataload_rlog.hpp  rlog_parser.cpp  rlog_parser.hpp
plugins/DataStreamCereal/: CMakeLists.txt  datastream_cereal.cpp  datastream_cereal.h  datastream_cereal.ui
profiling/: run-valgrind.sh
